# deepgp_eval

./: README.md  pyproject.toml
deep_gps_tutorial/: README.md  deep_gps.ipynb
deep_gps_tutorial/deepgp/: README.md
fully_bayes_gp/: full_bayesian_gps.ipynb
sk2torch_opt/: sk2torch_opt.ipynb
