[tool.poetry]
name = "bo-deepgp"
version = "0.1.0"
description = ""
authors = ["James Bristow <jbris@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.11"
botorch = "^0.10.0"
torch = "^2.2.1"
pyro-api = "^0.1.2"
pyro-ppl = "^1.9.0"
gpytorch = "^1.11"
tqdm = "^4.66.2"
numpy = "^1.26.4"
scipy = "<1.12.0"
pandas = "^2.2.1"
gpy = "^1.13.1"
scikit-optimize = "^0.9.0"
skorch = "^0.15.0"
sk2torch = "^1.2.0"
matplotlib = "^3.8.3"
mlai = "^0.1.2"
notebook = "^7.1.1"
plotly = "^5.19.0"
jupyterlab = "^4.1.4"
ipykernel = "^6.29.3"
httpx = "^0.27.0"
pods = "^0.1.14"
ipywidgets = "^8.1.2"
gym = "^0.26.2"
gpyopt = "^1.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
